# local-llm-model-lab

./: .gitignore  pyproject.toml  프로젝트 아이디어 정리
notebooks/: 10_fine_tunning_qwen.ipynb  1_10_fine_tuning_qwen.ipynb  1_11_fine_tuning_qwen_custom_data.ipynb  1_9_huggingface_llm.ipynb  huggingface_llm.ipynb
