[project]
name = "local-llm-model-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.4.0",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126" # 본인의 CUDA 버전에 맞춤
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
]
ignore = [
    "E501",
    "N803",
    'N812',
    'E401',
    'N806',
    'N816',
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
